test/libsolidity/syntaxTests/more_than_256_importerrors.sol
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";
import "a.sol";

contract C {
  function f() public {
  }
}
// ----
// ParserError 6275: (0-15): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (16-31): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (32-47): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (48-63): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (64-79): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (80-95): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (96-111): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (112-127): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (128-143): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (144-159): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (160-175): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (176-191): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (192-207): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (208-223): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (224-239): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (240-255): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (256-271): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (272-287): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (288-303): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (304-319): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (320-335): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (336-351): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (352-367): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (368-383): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (384-399): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (400-415): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (416-431): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (432-447): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (448-463): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (464-479): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (480-495): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (496-511): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (512-527): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (528-543): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (544-559): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (560-575): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (576-591): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (592-607): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (608-623): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (624-639): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (640-655): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (656-671): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (672-687): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (688-703): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (704-719): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (720-735): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (736-751): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (752-767): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (768-783): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (784-799): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (800-815): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (816-831): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (832-847): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (848-863): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (864-879): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (880-895): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (896-911): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (912-927): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (928-943): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (944-959): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (960-975): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (976-991): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (992-1007): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1008-1023): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1024-1039): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1040-1055): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1056-1071): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1072-1087): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1088-1103): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1104-1119): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1120-1135): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1136-1151): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1152-1167): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1168-1183): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1184-1199): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1200-1215): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1216-1231): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1232-1247): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1248-1263): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1264-1279): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1280-1295): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1296-1311): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1312-1327): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1328-1343): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1344-1359): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1360-1375): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1376-1391): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1392-1407): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1408-1423): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1424-1439): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1440-1455): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1456-1471): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1472-1487): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1488-1503): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1504-1519): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1520-1535): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1536-1551): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1552-1567): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1568-1583): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1584-1599): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1600-1615): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1616-1631): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1632-1647): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1648-1663): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1664-1679): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1680-1695): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1696-1711): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1712-1727): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1728-1743): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1744-1759): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1760-1775): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1776-1791): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1792-1807): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1808-1823): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1824-1839): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1840-1855): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1856-1871): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1872-1887): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1888-1903): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1904-1919): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1920-1935): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1936-1951): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1952-1967): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1968-1983): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (1984-1999): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2000-2015): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2016-2031): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2032-2047): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2048-2063): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2064-2079): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2080-2095): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2096-2111): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2112-2127): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2128-2143): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2144-2159): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2160-2175): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2176-2191): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2192-2207): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2208-2223): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2224-2239): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2240-2255): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2256-2271): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2272-2287): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2288-2303): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2304-2319): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2320-2335): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2336-2351): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2352-2367): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2368-2383): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2384-2399): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2400-2415): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2416-2431): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2432-2447): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2448-2463): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2464-2479): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2480-2495): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2496-2511): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2512-2527): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2528-2543): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2544-2559): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2560-2575): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2576-2591): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2592-2607): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2608-2623): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2624-2639): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2640-2655): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2656-2671): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2672-2687): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2688-2703): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2704-2719): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2720-2735): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2736-2751): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2752-2767): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2768-2783): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2784-2799): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2800-2815): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2816-2831): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2832-2847): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2848-2863): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2864-2879): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2880-2895): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2896-2911): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2912-2927): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2928-2943): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2944-2959): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2960-2975): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2976-2991): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (2992-3007): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3008-3023): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3024-3039): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3040-3055): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3056-3071): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3072-3087): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3088-3103): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3104-3119): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3120-3135): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3136-3151): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3152-3167): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3168-3183): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3184-3199): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3200-3215): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3216-3231): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3232-3247): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3248-3263): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3264-3279): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3280-3295): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3296-3311): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3312-3327): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3328-3343): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3344-3359): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3360-3375): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3376-3391): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3392-3407): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3408-3423): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3424-3439): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3440-3455): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3456-3471): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3472-3487): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3488-3503): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3504-3519): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3520-3535): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3536-3551): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3552-3567): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3568-3583): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3584-3599): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3600-3615): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3616-3631): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3632-3647): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3648-3663): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3664-3679): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3680-3695): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3696-3711): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3712-3727): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3728-3743): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3744-3759): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3760-3775): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3776-3791): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3792-3807): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3808-3823): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3824-3839): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3840-3855): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3856-3871): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3872-3887): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3888-3903): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3904-3919): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3920-3935): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3936-3951): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3952-3967): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3968-3983): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (3984-3999): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4000-4015): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4016-4031): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4032-4047): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4048-4063): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4064-4079): Source "a.sol" not found: File not supplied initially.
// ParserError 6275: (4080-4095): Source "a.sol" not found: File not supplied initially.
// Warning 4013: There are more than 256 errors. Aborting.
